Update sidebar overflow issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -90,6 +90,16 @@ iframe{
     padding: 1.5rem;
     background: lightslategrey;
   }
+  .colorPickerContainer{
+    width: 100%;
+    display:grid;
+    grid-template-columns: 1fr 40px;
+    align-items: center;
+    &:hover{
+      cursor: pointer;
+    }
+    
+  }
   .sideBar {
     order: 1;
     flex: 0 0 auto;
@@ -137,12 +147,10 @@ iframe{
 
         .colorPicker {
           .color-preview {
-            position: absolute;
-            width: 20px;
-            height: 20px;
-            border-radius: 5px;
+            width: 33px;
+            height: 33px;
+            border-radius: 9999px;
             z-index: 1;
-            transform: translate(960%, -128%);
           }
         }
         .inputTitle:first-child {
